# gcs_assist_service

./: .env.local  .gitignore  .pre-commit-config.yaml  API_KEYS_SETUP.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  docker-compose.deps.yml  docker-compose.local.yml  docker-compose.yml  logging.ini  pyproject.toml  pytest.ini  requirements.txt
.ebextensions/: 00_install_required_packages.config  02_migrate_db.config  03_elb_timeout.config  04_cloudwatch.config  log-streaming.config
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  ticket_discussion.md
.github/workflows/: check-fixups.yml  check-label.yml  pylint.yml  tests.yml
app/: config.py  main.py
app/alembic/: README  alembic.ini  env.py
app/api/: __init__.py  api_config.py  api_endpoints.py  api_paths.py  api_responses.py  api_wrapper.py  auth_token.py  endpoint_defaults.py  session_request.py  session_user.py
app/app_types/: __init__.py  chat.py  gov_uk_search.py  message.py  opensearch.py  requests.py  responses.py  themes_use_cases.py  user.py  user_prompt.py
app/database/: models.py  (+4 more)
architecture/: application.mermaid  infrastructure.mermaid
deploy/: .gitignore  DEPLOYMENT_FIX_GUIDE.md  DEPLOYMENT_SUMMARY.md  README.md  azure-deployment-steps.yaml  azure-pipelines.yaml  check_bedrock_access.py  create_bedrock_iam.sh  deploy-containerapp-fixed.sh  deploy-containerapp.sh  fix-opensearch-deployment.sh  rebuild-image-amd64.sh  validate-bicep.sh
scripts/: create_bedrock_agent.sh
tests/: conftest.py  mock_request.py  test_db_setup_for_tests.py
(+169 files in other folders)
